# ESL-Design-Final-Project

./: README.md
c++/AES/: aes.cbp  aes.depend  aes.layout  main.cpp
c++/AES/src/: AES.cpp
riscv-vp/sw/aes128/: Makefile  key  main  main.cpp  plaintext
riscv-vp/vp/acc-mc/: CMakeLists.txt  defines.h  dma.h  dut.h  main.cpp
systemc/aes-128/: .gitignore  AES128.cpp  AES128.h  CMakeLists.txt  System.cpp  System.h  Testbench.cpp  Testbench.h  defines.h  main.cpp
systemc/aes-128/stratus/: project.tcl
